# intern-mint

./: Cargo.toml  README.md  codebook.toml  rustfmt.toml
.github/workflows/: rust.yml
.zed/: settings.json  tasks.json
benches/: comparison.rs  random_strings_pool.rs
src/: borrow.rs  bstr.rs  databuf.rs  interned.rs  lib.rs  pool.rs  serde.rs  tests.rs
