[package]
name = "intern-mint"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
bstr = { version = "1.12.0", features = ["serde"], optional = true }
databuf = { version = "0.5.0", optional = true }
hashbrown = "0.15.4"
parking_lot = "0.12.4"
serde = { version = "1.0.219", optional = true }
triomphe = "0.1.14"

[features]
default = []
bstr = ["dep:bstr"]
databuf = ["dep:databuf"]
serde = ["bstr", "dep:serde"]
