[package]
name = "intern-mint"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
keywords = ["bytes", "cache", "hash", "interning", "slice"]
description = "byte slice interning"
repository = "https://github.com/sweet-security/intern-mint"

[dependencies]
ahash = "0.8.12"
bstr = { version = "1.12.0", optional = true }
databuf = { version = "0.5.0", optional = true }
hashbrown = { version = "0.15.4", default-features = false }
parking_lot = "0.12.4"
serde = { version = "1.0.219", optional = true }
triomphe = { version = "0.1.14", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
intern-arc = "0.6.1"
internment = { version = "0.8.6", default-features = false, features = ["arc"] }
rand = "0.9.2"
rayon = "1.10.0"
serde_json = "1.0.140"
serial_test = "3.2.0"

[[bench]]
name = "comparison"
harness = false

[features]
default = []
bstr = ["dep:bstr"]
databuf = ["dep:databuf"]
serde = ["bstr", "bstr/serde", "dep:serde"]
