[package]
name = "intern-mint"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
keywords = ["bytes", "cache", "hash", "interning", "slice"]
description = "byte slice interning"
repository = "https://github.com/sweet-security/intern-mint"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
ahash = "0.8.12"
bstr = { version = "1.12.1", optional = true }
hashbrown = { version = "0.17.0", default-features = false }
parking_lot = "0.12.5"
serde = { version = "1.0.228", optional = true }
triomphe = { version = "0.1.15", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
intern-arc = "0.6.2"
internment = { version = "0.8.6", default-features = false, features = ["arc"] }
rand = "0.10.1"
rayon = "1.11.0"
serde_json = "1.0.149"
serial_test = "3.4.0"

[[bench]]
name = "comparison"
harness = false

[features]
default = []
bstr = ["dep:bstr"]
serde = ["bstr", "bstr/serde", "dep:serde"]
